--- a/alterUber_backend/alterUber_domain/src/main/resources/application.properties
+++ b/alterUber_backend/alterUber_domain/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ##### MySQL DB access properties #####
-db.driverClassName=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/alterUber_DB?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+db.driverClassName=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/alterUber_DB?useUnicode=yes&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 db.username=ecommerce
 db.password=eCom@di2018
 
