--- a/alterUber-docker/docker-compose.yml
+++ b/alterUber-docker/docker-compose.yml
@@ -13,15 +13,19 @@ services:
     restart: unless-stopped
 
   db:
-    container_name: postgres
+    container_name: mysql
     build: ../eCommerce_DB
     ports:
-      - "5432:5432"
+      - "3307:3306"
     volumes:
-      - data:/var/lib/postgresql/data
+      - data:/var/lib/mysql/data
     networks:
       - ubernet
     restart: unless-stopped
+    environment:
+       MYSQL_ROOT_PASSWORD: root
+       MYSQL_USER: ecommerce
+       MYSQL_PASSWORD: eCom@di2018
 
 volumes:
   data:
