--- a/eCommerce_DB/Dockerfile
+++ b/eCommerce_DB/Dockerfile
@@ -1,2 +1,5 @@
-FROM library/postgres:9.5
+FROM mysql/mysql-server:5.7
+
+ENV  MYSQL_ROOT_PASSWORD: root
+
 ADD alterUber_DB_init.sql /docker-entrypoint-initdb.d/
