--- a/alterUber_backend/alterUber_service/pom.xml
+++ b/alterUber_backend/alterUber_service/pom.xml
@@ -83,6 +83,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.0-801.jdbc4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
