--- a/alterUber_backend/alterUber_service/src/main/resources/application.properties
+++ b/alterUber_backend/alterUber_service/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 ##### MySQL DB access properties #####
 db.driverClassName=org.postgresql.Driver
-db.url=jdbc:postgresql://0.0.0.0:5432/alterUber_db?useUnicode=yes&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+db.url=jdbc:postgresql://localhost:5432/alteruber_db?useUnicode=yes&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 db.username=ecommerce
 db.password=eCom@di2018
 
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.show_sql = true
 hibernate.format_sql = true
 hibernate.id.new_generator_mappings = false
