--- a/alterUber-docker/docker-compose.yml
+++ b/alterUber-docker/docker-compose.yml
@@ -17,7 +17,8 @@ services:
     build: ../eCommerce_DB
     ports:
       - "5432:5432"
-
+    volumes:
+      - data:/var/lib/postgresql/data
     networks:
       - ubernet
     restart: unless-stopped
