--- a/alterUber_backend/alterUber_service/src/main/resources/application.properties
+++ b/alterUber_backend/alterUber_service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ##### MySQL DB access properties #####
 db.driverClassName=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/alteruber_db?useUnicode=yes&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-db.username=ecommerce
-db.password=eCom@di2018
+db.url=jdbc:postgresql://localhost:5432/postgres
+db.username=postgres
+db.password=
 
 
 ## Hibernate Properties
