--- a/alterUber_backend/alterUber_service/src/main/resources/application.properties
+++ b/alterUber_backend/alterUber_service/src/main/resources/application.properties
@@ -12,3 +12,27 @@ hibernate.show_sql = true
 hibernate.format_sql = true
 hibernate.id.new_generator_mappings = false
 hibernate.ddl-auto = none
+
+#
+# Encryption algorithm
+algorithm=PBKDF2WithHmacSHA1
+
+
+#
+# SecureRandom instance
+secureRandomInstance=SHA1PRNG
+
+#
+# Derived key length
+derivedKeyLength=160
+
+#
+# Iterations for password encryption
+iterations=20000
+
+#
+#SSL Certificate
+server.ssl.key-store=./src/main/resources/ssl-keystore/keystore.jks
+server.ssl.key-store-password=password
+server.ssl.key-password=password
+server.ssl.protocol=TLS
